--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,10 +2,339 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import the dependencies.\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the requests library.\n",
+    "import requests\n",
+    "\n",
+    "# Import the API key.\n",
+    "from config import weather_api_key "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Starting URL for Weather Map API Call.\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=53b158ac68212d1c69e48b1a3aa14684&q=Boston\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "print(city_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make a 'Get' request for the city weather.\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":501,\"main\":\"Rain\",\"description\":\"moderate rain\",\"icon\":\"10n\"}],\"base\":\"stations\",\"main\":{\"temp\":49.14,\"feels_like\":45.32,\"temp_min\":47.82,\"temp_max\":50.52,\"pressure\":1026,\"humidity\":93},\"visibility\":6213,\"wind\":{\"speed\":8.99,\"deg\":115,\"gust\":14},\"rain\":{\"1h\":3.16},\"clouds\":{\"all\":100},\"dt\":1670399678,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1670414398,\"sunset\":1670447508},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the text of the 'Get' request.\n",
+    "city_weather.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 501,\n",
+       "   'main': 'Rain',\n",
+       "   'description': 'moderate rain',\n",
+       "   'icon': '10n'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 49.14,\n",
+       "  'feels_like': 45.32,\n",
+       "  'temp_min': 47.82,\n",
+       "  'temp_max': 50.52,\n",
+       "  'pressure': 1026,\n",
+       "  'humidity': 93},\n",
+       " 'visibility': 6213,\n",
+       " 'wind': {'speed': 8.99, 'deg': 115, 'gust': 14},\n",
+       " 'rain': {'1h': 3.16},\n",
+       " 'clouds': {'all': 100},\n",
+       " 'dt': 1670399678,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1670414398,\n",
+       "  'sunset': 1670447508},\n",
+       " 'timezone': -18000,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the JSON text of the 'Get' request.\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City Weather found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 701, 'main': 'Mist', 'description': 'mist', 'icon': '50n'},\n",
+       "  {'id': 502,\n",
+       "   'main': 'Rain',\n",
+       "   'description': 'heavy intensity rain',\n",
+       "   'icon': '10n'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 49.08,\n",
+       "  'feels_like': 44.42,\n",
+       "  'temp_min': 47.66,\n",
+       "  'temp_max': 50.52,\n",
+       "  'pressure': 1026,\n",
+       "  'humidity': 94},\n",
+       " 'visibility': 8047,\n",
+       " 'wind': {'speed': 11.5, 'deg': 110},\n",
+       " 'rain': {'1h': 5.33},\n",
+       " 'clouds': {'all': 100},\n",
+       " 'dt': 1670401267,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1670414398,\n",
+       "  'sunset': 1670447508},\n",
+       " 'timezone': -18000,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the JSON data.\n",
+    "boston_data = city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'US'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data[\"sys\"][\"country\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1670401267"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data[\"dt\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.3584 -71.0598 50.52 94 100 11.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "lat = boston_data[\"coord\"][\"lat\"]\n",
+    "lng = boston_data[\"coord\"][\"lon\"]\n",
+    "max_temp = boston_data[\"main\"][\"temp_max\"]\n",
+    "humidity = boston_data[\"main\"][\"humidity\"]\n",
+    "clouds = boston_data[\"clouds\"][\"all\"]\n",
+    "wind = boston_data[\"wind\"][\"speed\"]\n",
+    "print(lat, lng, max_temp, humidity, clouds, wind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-12-07 08:21:07'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the datetime module from the datetime library.\n",
+    "from datetime import datetime\n",
+    "# Get the date from the JSON file.\n",
+    "date = boston_data[\"dt\"]\n",
+    "# Convert the UTC date to a date format with year, month, day, hours, minutes, and seconds.\n",
+    "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
+   ]
   }
  ],
  "metadata": {
@@ -15,10 +344,17 @@
    "name": "pythondata"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.7.15"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
